--- a/org.eclipse.smarthome.karaf.features/pom.xml
+++ b/org.eclipse.smarthome.karaf.features/pom.xml
@@ -22,7 +22,7 @@
       <plugin>
         <groupId>org.apache.karaf.tooling</groupId>
         <artifactId>karaf-maven-plugin</artifactId>
-        <version>4.0.0.M2</version>
+        <version>4.0.0</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
