--- a/org.openhab.karaf-integration-tests/pom.xml
+++ b/org.openhab.karaf-integration-tests/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>org.apache.karaf.features</groupId>
       <artifactId>org.apache.karaf.features.core</artifactId>
-      <version>4.0.0-SNAPSHOT</version>
+      <version>4.0.0</version>
       <scope>provided</scope>
     </dependency>
     <!-- bnd -->
@@ -85,7 +85,7 @@
       <groupId>org.apache.karaf</groupId>
       <artifactId>apache-karaf</artifactId>
       <type>tar.gz</type>
-      <version>4.0.0-SNAPSHOT</version>
+      <version>4.0.0</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
